amazon_eks/security_group.tf
#sec group public
resource "aws_security_group" "public-sec-dl" {
  name        = "public-sec-dl"
  description = "public"
  vpc_id      = aws_vpc.vpc_dl.id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #Bloco de configuração de saída (Todas)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "pub-sg-dl"
  }
}
#====================================Security Group Privado======================================
resource "aws_security_group" "private-sec-dl" {
  name        = "private-public-sec-dl"
  description = "private"
  vpc_id      = aws_vpc.vpc_dl.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]

  }

  tags = {
    Name = "priv-sg-dl"
  }
}
# #===========================================Security Group LB=====================================

resource "aws_security_group" "sg_lb_dl" {
  name        = "sg_lb_dl"
  description = "Security Group para o LB"
  vpc_id      = aws_vpc.vpc_dl.id

  #Bloco de configuração de entrada (HTTP)
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "sg_lb_dl"
  }
}

#===========================================Security Group RDS=====================================
resource "aws_security_group" "sg_db_dl" {
  name        = "sg_db_dl"
  description = "Security Group para o RDS"
  vpc_id      = aws_vpc.vpc_dl.id

  ingress {
    description = "MYSQL"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "sg_db_dl"
  }
}
#===========================================Security Group SSH=====================================
resource "aws_security_group" "sg_ssh_dl" {
  name        = "sg_ssh_dl"
  description = "Security Group para acesso SSH"
  vpc_id      = aws_vpc.vpc_dl.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "sg_ssh_dl"
  }
}
